security(backend): proteger importacoes e preservar contas existentes